mysql-pv.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: db
  labels: 
    app: db
spec: {}
status: {}
