mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
  namespace: db
spec:
  ports:
  - port: 3306
  selector:
    app: db
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: db
spec:
  ports:
  - port: 3306
  selector:
    app: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: db
  labels:
    app: db
spec:
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - image: mysql:9
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        - name: config-db-volume
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
      - name: config-db-volume
        configMap:
          name: mysql-configmap
