librespeed-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: final
  labels: 
    app.kubernetes.io/instance: librespeed
spec: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/instance: librespeed
  name: speedtest-service
  namespace: final
spec:
  ports:
  - name: 8080-8080
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/instance: librespeed
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librespeed-ingress
  namespace: final
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/compute-full-forwarded-for: "true"
  labels:
    app.kubernetes.io/instance: librespeed
spec:
  ingressClassName: nginx
  rules:
  - host: app-158.160.190.240.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: speedtest-service
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librespeed
  namespace: final
  labels:
    app.kubernetes.io/instance: librespeed
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: librespeed
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: librespeed
    spec:
      containers:
      - image: registry.rebrainme.com/workshops/middle/kubernetes-local/newplatform_autochecks/speedtest:5.3
        name: speedtest
        volumeMounts:
        - name: servers-configmap
          mountPath: /servers.json
          subPath: servers.json
      volumes:
      - name: servers-configmap
        configMap:
          name: librespeed-servers
      imagePullSecrets:
        - name: registrysecret
